ChromeOS - Fix some network related strings.

This fixes the ethernet string and removes broken/unused code for VPN
address in network info bubble.

BUG=706085

Review-Url: https://codereview.chromium.org/2781233002
Cr-Commit-Position: refs/heads/master@{#460841}

Former-commit-id: 4980bf9a7b63805fceae1fa3fb17922abb99f59a